--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -49,7 +49,7 @@
         </table>
       </div>
       <div class="col-md-6">
-        <img src="http://lorempixel.com/g/520/150/technics" alt="Lorem Pixel image" class="img">
+        <img src="http://lorempixel.com/g/520/150/technics" alt="Lorem Pixel image" class="detailsImage">
       </div>
     </div>
 
